--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,20 +1,33 @@
 name: CD
-on: [push]
+on:
+  push:
+    branches:
+      - main
+
 jobs:
   build-and-deploy:
+    env:
+      CI: true
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout 🛎️
-        uses: actions/checkout@v2 
+      - uses: actions/checkout@v2
 
-      - name: Install and Build 🔧 
-        run: |
-          npm install
-          npm run build
-
-      - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@releases/v3
+      - name: Setup Nodejs
+        uses: actions/setup-node@v2
         with:
-          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-          BRANCH: gh-pages
-          FOLDER: build
+          node-version: 14
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Run UTs
+        run: npm test
+
+      - name: Build production app
+        run: npm run build
+
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          deploy_key: ${{ secrets.ACCESS_TOKEN }}
+          publish_dir: ./build
